# rpicam-reflector-tracking

./: README.md  README_TEMP.md  meson.build
configuration/: configuration_camera.txt
configuration/configuration_post_processing/: configuration_cout.json  configuration_ethernet.json  configuration_pwm.json  configuration_uart.json
interfaces/: ethernet_await_start.cpp  ethernet_recv_byte.cpp  ethernet_recv_coor.cpp  ethernet_send_byte.cpp  ethernet_send_coor.cpp  pwm_clear.cpp  pwm_set_coor.cpp  uart_recv_coor.cpp  uart_send_coor.cpp
new_post_processing_stages/: draw_centroid_cv_stage.cpp  marker_tracking_cv_stage.cpp  position_cout_stage.cpp  position_ethernet_stage.cpp  position_pwm_stage.cpp  position_uart_stage.cpp
programs/: capture_frame.sh  tracking_cout.sh  tracking_cout_vid.sh  tracking_ethernet.sh  tracking_ethernet_remote.sh  tracking_ethernet_vid.sh  tracking_pwm.sh  tracking_uart.sh
set_leds/: clear_leds.py  set_leds.py
set_leds/pi5neo/: LICENSE.txt  README.md
stl/: led_ring_mount.STL
